--- a/chess_tutorial/package.json
+++ b/chess_tutorial/package.json
@@ -14,36 +14,37 @@
         "test:coverage": "vitest --coverage"
     },
     "dependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "chess.js": "^1.0.0-beta.8",
         "@reduxjs/toolkit": "^1.9.7",
-        "react-redux": "^8.1.3",
+        "chess.js": "^1.0.0-beta.8",
+        "clsx": "^2.0.0",
         "framer-motion": "^10.16.4",
         "lucide-react": "^0.292.0",
-        "clsx": "^2.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^8.1.3",
+        "stockfish": "^16.0.0",
         "tailwind-merge": "^2.0.0"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.1.4",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^14.5.1",
         "@types/react": "^18.2.37",
         "@types/react-dom": "^18.2.15",
         "@typescript-eslint/eslint-plugin": "^6.10.0",
         "@typescript-eslint/parser": "^6.10.0",
         "@vitejs/plugin-react": "^4.1.0",
+        "@vitest/ui": "^0.34.6",
         "autoprefixer": "^10.4.16",
         "eslint": "^8.53.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.4",
+        "jsdom": "^22.1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.3.5",
         "typescript": "^5.2.2",
         "vite": "^4.5.0",
-        "vitest": "^0.34.6",
-        "@vitest/ui": "^0.34.6",
-        "jsdom": "^22.1.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/jest-dom": "^6.1.4",
-        "@testing-library/user-event": "^14.5.1"
+        "vitest": "^0.34.6"
     },
     "keywords": [
         "chess",
