--- a/chess_tutorial/.npmrc
+++ b/chess_tutorial/.npmrc
@@ -1,3 +1,5 @@
 registry=https://registry.npmjs.org/
-@npm:registry=https://registry.npmjs.org/
-always-auth=false 
+always-auth=false
+unsafe-perm=true
+fund=false
+audit=false 
