--- a/chess_tutorial/package.json
+++ b/chess_tutorial/package.json
@@ -16,7 +16,7 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.7",
-        "chess.js": "^1.0.0-beta.8",
+        "chess.js": "^1.4.0",
         "clsx": "^2.0.0",
         "framer-motion": "^10.16.4",
         "lucide-react": "^0.292.0",
